don't add a type to the watcher

if we narrow down the types watched, when properties  that are catched by and inverted term change, they won't be signaled if the object where those properties belong is of the wrong type:
example: isRelated property for activities, if we do a query asking for items of type FileDataObject
BUG:313035